SFDCProject/src/objects/Appointment_Territory__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Region</label>
        <referenceTo>Appointment_Region__c</referenceTo>
        <relationshipLabel>Appointment Territories</relationshipLabel>
        <relationshipName>Appointment_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buffer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Appointment Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zip_Code__c</field>
            <operation>equals</operation>
            <value>94582</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Denver</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Denver</value>
        </filters>
        <label>Denver</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Jersey</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>New Jersey</value>
        </filters>
        <filters>
            <field>Territory__c</field>
            <operation>notContain</operation>
            <value>[</value>
        </filters>
        <label>New Jersey</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_York_2</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>New York 2</value>
        </filters>
        <label>New York 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>North_San_Diego</fullName>
        <columns>Territory__c</columns>
        <columns>Category__c</columns>
        <columns>Threshold__c</columns>
        <columns>Buffer__c</columns>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>North San Diego</value>
        </filters>
        <label>North San Diego</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SATerritories</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Territory__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>South Bay</value>
        </filters>
        <label>SATerritories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_East_Bay_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>East Bay</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - East Bay Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Fresno_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Fresno</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - Fresno Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_SLO_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>San Luis Obispo</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - SLO Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Sacramento_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Sacramento</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - Sacramento Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_South_Bay_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>South Bay</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - South Bay Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SA_Stockton_Branch_Territory</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Stockton</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>SA - Stockton Branch Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SBSATerritories</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>South Bay</value>
        </filters>
        <label>SBSATerritories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sacramento_Service_Territories</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Sacramento</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Sacramento Service Territory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SalesTerritories</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Buffer__c</columns>
        <columns>Threshold__c</columns>
        <columns>Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>Buffer__c</field>
            <operation>equals</operation>
            <value>60</value>
        </filters>
        <label>SalesTerritories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Appointment Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>